force-app/main/default/objects/TicTacToeSettings__c/TicTacToeSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>TicTacToe Settings</label>
</CustomObject>