force-app/main/default/objects/TicTacToeSettings__c/fields/Destination_Org_pushTopic_RecordId__c.field-meta.xml
<CustomField>
    <fullName>Destination_Org_pushTopic_RecordId__c</fullName>
    <label>Destination Org pushTopic RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>