force-app/main/default/objects/TicTacToeSettings__c/fields/pushTopic_RecordId__c.field-meta.xml
<CustomField>
    <fullName>pushTopic_RecordId__c</fullName>
    <label>pushTopic RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>