force-app/main/default/objects/TicTacToeSettings__c/fields/sId__c.field-meta.xml
<CustomField>
    <fullName>sId__c</fullName>
    <label>sId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>